src/parser/SQLParser.cc

// Generated from SQL.g4 by ANTLR 4.7

#include "SQLParser.h"

#include "SQLVisitor.h"

using namespace antlrcpp;
using namespace antlr4;

SQLParser::SQLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA,
                                             _sharedContextCache);
}

SQLParser::~SQLParser() { delete _interpreter; }

std::string SQLParser::getGrammarFileName() const { return "SQL.g4"; }

const std::vector<std::string> &SQLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary &SQLParser::getVocabulary() const { return _vocabulary; }

//----------------- ProgramContext
//------------------------------------------------------------------

SQLParser::ProgramContext::ProgramContext(ParserRuleContext *parent,
                                          size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SQLParser::ProgramContext::EOF() {
  return getToken(SQLParser::EOF, 0);
}

std::vector<SQLParser::StatementContext *>
SQLParser::ProgramContext::statement() {
  return getRuleContexts<SQLParser::StatementContext>();
}

SQLParser::StatementContext *SQLParser::ProgramContext::statement(size_t i) {
  return getRuleContext<SQLParser::StatementContext>(i);
}

size_t SQLParser::ProgramContext::getRuleIndex() const {
  return SQLParser::RuleProgram;
}

antlrcpp::Any SQLParser::ProgramContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::ProgramContext *SQLParser::program() {
  ProgramContext *_localctx =
      _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, SQLParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~0x3fULL) == 0) &&
            ((1ULL << _la) &
             ((1ULL << SQLParser::T__1) | (1ULL << SQLParser::T__4) |
              (1ULL << SQLParser::T__8) | (1ULL << SQLParser::T__9) |
              (1ULL << SQLParser::T__10) | (1ULL << SQLParser::T__13) |
              (1ULL << SQLParser::T__16) | (1ULL << SQLParser::T__18) |
              (1ULL << SQLParser::T__25) | (1ULL << SQLParser::Null) |
              (1ULL << SQLParser::Annotation))) != 0)) {
      setState(44);
      statement();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(50);
    match(SQLParser::EOF);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext
//------------------------------------------------------------------

SQLParser::StatementContext::StatementContext(ParserRuleContext *parent,
                                              size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

SQLParser::Db_statementContext *SQLParser::StatementContext::db_statement() {
  return getRuleContext<SQLParser::Db_statementContext>(0);
}

SQLParser::Table_statementContext *
SQLParser::StatementContext::table_statement() {
  return getRuleContext<SQLParser::Table_statementContext>(0);
}

SQLParser::Index_statementContext *
SQLParser::StatementContext::index_statement() {
  return getRuleContext<SQLParser::Index_statementContext>(0);
}

tree::TerminalNode *SQLParser::StatementContext::Annotation() {
  return getToken(SQLParser::Annotation, 0);
}

tree::TerminalNode *SQLParser::StatementContext::Null() {
  return getToken(SQLParser::Null, 0);
}

size_t SQLParser::StatementContext::getRuleIndex() const {
  return SQLParser::RuleStatement;
}

antlrcpp::Any SQLParser::StatementContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::StatementContext *SQLParser::statement() {
  StatementContext *_localctx =
      _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SQLParser::RuleStatement);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(65);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 1, _ctx)) {
      case 1: {
        enterOuterAlt(_localctx, 1);
        setState(52);
        db_statement();
        setState(53);
        match(SQLParser::T__0);
        break;
      }

      case 2: {
        enterOuterAlt(_localctx, 2);
        setState(55);
        table_statement();
        setState(56);
        match(SQLParser::T__0);
        break;
      }

      case 3: {
        enterOuterAlt(_localctx, 3);
        setState(58);
        index_statement();
        setState(59);
        match(SQLParser::T__0);
        break;
      }

      case 4: {
        enterOuterAlt(_localctx, 4);
        setState(61);
        match(SQLParser::Annotation);
        setState(62);
        match(SQLParser::T__0);
        break;
      }

      case 5: {
        enterOuterAlt(_localctx, 5);
        setState(63);
        match(SQLParser::Null);
        setState(64);
        match(SQLParser::T__0);
        break;
      }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Db_statementContext
//------------------------------------------------------------------

SQLParser::Db_statementContext::Db_statementContext(ParserRuleContext *parent,
                                                    size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t SQLParser::Db_statementContext::getRuleIndex() const {
  return SQLParser::RuleDb_statement;
}

void SQLParser::Db_statementContext::copyFrom(Db_statementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Show_tablesContext
//------------------------------------------------------------------

SQLParser::Show_tablesContext::Show_tablesContext(Db_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Show_tablesContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitShow_tables(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Show_indexesContext
//------------------------------------------------------------------

SQLParser::Show_indexesContext::Show_indexesContext(Db_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Show_indexesContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitShow_indexes(this);
  else
    return visitor->visitChildren(this);
}
SQLParser::Db_statementContext *SQLParser::db_statement() {
  Db_statementContext *_localctx =
      _tracker.createInstance<Db_statementContext>(_ctx, getState());
  enterRule(_localctx, 4, SQLParser::RuleDb_statement);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 2, _ctx)) {
      case 1: {
        _localctx = dynamic_cast<Db_statementContext *>(
            _tracker.createInstance<SQLParser::Show_tablesContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(67);
        match(SQLParser::T__1);
        setState(68);
        match(SQLParser::T__2);
        break;
      }

      case 2: {
        _localctx = dynamic_cast<Db_statementContext *>(
            _tracker.createInstance<SQLParser::Show_indexesContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(69);
        match(SQLParser::T__1);
        setState(70);
        match(SQLParser::T__3);
        break;
      }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Table_statementContext
//------------------------------------------------------------------

SQLParser::Table_statementContext::Table_statementContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t SQLParser::Table_statementContext::getRuleIndex() const {
  return SQLParser::RuleTable_statement;
}

void SQLParser::Table_statementContext::copyFrom(Table_statementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Delete_from_tableContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Delete_from_tableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::Where_and_clauseContext *
SQLParser::Delete_from_tableContext::where_and_clause() {
  return getRuleContext<SQLParser::Where_and_clauseContext>(0);
}

SQLParser::Delete_from_tableContext::Delete_from_tableContext(
    Table_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Delete_from_tableContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitDelete_from_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Insert_into_tableContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Insert_into_tableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::Value_listsContext *
SQLParser::Insert_into_tableContext::value_lists() {
  return getRuleContext<SQLParser::Value_listsContext>(0);
}

SQLParser::Insert_into_tableContext::Insert_into_tableContext(
    Table_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Insert_into_tableContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitInsert_into_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Create_tableContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Create_tableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::Field_listContext *SQLParser::Create_tableContext::field_list() {
  return getRuleContext<SQLParser::Field_listContext>(0);
}

SQLParser::Create_tableContext::Create_tableContext(
    Table_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Create_tableContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitCreate_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Describe_tableContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Describe_tableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::Describe_tableContext::Describe_tableContext(
    Table_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Describe_tableContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitDescribe_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Select_table_Context
//------------------------------------------------------------------

SQLParser::Select_tableContext *
SQLParser::Select_table_Context::select_table() {
  return getRuleContext<SQLParser::Select_tableContext>(0);
}

SQLParser::Select_table_Context::Select_table_Context(
    Table_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Select_table_Context::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitSelect_table_(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Drop_tableContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Drop_tableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::Drop_tableContext::Drop_tableContext(Table_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Drop_tableContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitDrop_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Update_tableContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Update_tableContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::Set_clauseContext *SQLParser::Update_tableContext::set_clause() {
  return getRuleContext<SQLParser::Set_clauseContext>(0);
}

SQLParser::Where_and_clauseContext *
SQLParser::Update_tableContext::where_and_clause() {
  return getRuleContext<SQLParser::Where_and_clauseContext>(0);
}

SQLParser::Update_tableContext::Update_tableContext(
    Table_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Update_tableContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitUpdate_table(this);
  else
    return visitor->visitChildren(this);
}
SQLParser::Table_statementContext *SQLParser::table_statement() {
  Table_statementContext *_localctx =
      _tracker.createInstance<Table_statementContext>(_ctx, getState());
  enterRule(_localctx, 6, SQLParser::RuleTable_statement);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SQLParser::T__4: {
        _localctx = dynamic_cast<Table_statementContext *>(
            _tracker.createInstance<SQLParser::Create_tableContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(73);
        match(SQLParser::T__4);
        setState(74);
        match(SQLParser::T__5);
        setState(75);
        match(SQLParser::Identifier);
        setState(76);
        match(SQLParser::T__6);
        setState(77);
        field_list();
        setState(78);
        match(SQLParser::T__7);
        break;
      }

      case SQLParser::T__8: {
        _localctx = dynamic_cast<Table_statementContext *>(
            _tracker.createInstance<SQLParser::Drop_tableContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(80);
        match(SQLParser::T__8);
        setState(81);
        match(SQLParser::T__5);
        setState(82);
        match(SQLParser::Identifier);
        break;
      }

      case SQLParser::T__9: {
        _localctx = dynamic_cast<Table_statementContext *>(
            _tracker.createInstance<SQLParser::Describe_tableContext>(
                _localctx));
        enterOuterAlt(_localctx, 3);
        setState(83);
        match(SQLParser::T__9);
        setState(84);
        match(SQLParser::Identifier);
        break;
      }

      case SQLParser::T__10: {
        _localctx = dynamic_cast<Table_statementContext *>(
            _tracker.createInstance<SQLParser::Insert_into_tableContext>(
                _localctx));
        enterOuterAlt(_localctx, 4);
        setState(85);
        match(SQLParser::T__10);
        setState(86);
        match(SQLParser::T__11);
        setState(87);
        match(SQLParser::Identifier);
        setState(88);
        match(SQLParser::T__12);
        setState(89);
        value_lists();
        break;
      }

      case SQLParser::T__13: {
        _localctx = dynamic_cast<Table_statementContext *>(
            _tracker.createInstance<SQLParser::Delete_from_tableContext>(
                _localctx));
        enterOuterAlt(_localctx, 5);
        setState(90);
        match(SQLParser::T__13);
        setState(91);
        match(SQLParser::T__14);
        setState(92);
        match(SQLParser::Identifier);
        setState(93);
        match(SQLParser::T__15);
        setState(94);
        where_and_clause();
        break;
      }

      case SQLParser::T__16: {
        _localctx = dynamic_cast<Table_statementContext *>(
            _tracker.createInstance<SQLParser::Update_tableContext>(_localctx));
        enterOuterAlt(_localctx, 6);
        setState(95);
        match(SQLParser::T__16);
        setState(96);
        match(SQLParser::Identifier);
        setState(97);
        match(SQLParser::T__17);
        setState(98);
        set_clause();
        setState(99);
        match(SQLParser::T__15);
        setState(100);
        where_and_clause();
        break;
      }

      case SQLParser::T__18: {
        _localctx = dynamic_cast<Table_statementContext *>(
            _tracker.createInstance<SQLParser::Select_table_Context>(
                _localctx));
        enterOuterAlt(_localctx, 7);
        setState(102);
        select_table();
        break;
      }

      default:
        throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Select_tableContext
//------------------------------------------------------------------

SQLParser::Select_tableContext::Select_tableContext(ParserRuleContext *parent,
                                                    size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

SQLParser::SelectorsContext *SQLParser::Select_tableContext::selectors() {
  return getRuleContext<SQLParser::SelectorsContext>(0);
}

SQLParser::IdentifiersContext *SQLParser::Select_tableContext::identifiers() {
  return getRuleContext<SQLParser::IdentifiersContext>(0);
}

SQLParser::Where_and_clauseContext *
SQLParser::Select_tableContext::where_and_clause() {
  return getRuleContext<SQLParser::Where_and_clauseContext>(0);
}

SQLParser::ColumnContext *SQLParser::Select_tableContext::column() {
  return getRuleContext<SQLParser::ColumnContext>(0);
}

std::vector<tree::TerminalNode *> SQLParser::Select_tableContext::Integer() {
  return getTokens(SQLParser::Integer);
}

tree::TerminalNode *SQLParser::Select_tableContext::Integer(size_t i) {
  return getToken(SQLParser::Integer, i);
}

size_t SQLParser::Select_tableContext::getRuleIndex() const {
  return SQLParser::RuleSelect_table;
}

antlrcpp::Any SQLParser::Select_tableContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitSelect_table(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::Select_tableContext *SQLParser::select_table() {
  Select_tableContext *_localctx =
      _tracker.createInstance<Select_tableContext>(_ctx, getState());
  enterRule(_localctx, 8, SQLParser::RuleSelect_table);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(SQLParser::T__18);
    setState(106);
    selectors();
    setState(107);
    match(SQLParser::T__14);
    setState(108);
    identifiers();
    setState(111);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLParser::T__15) {
      setState(109);
      match(SQLParser::T__15);
      setState(110);
      where_and_clause();
    }
    setState(116);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLParser::T__19) {
      setState(113);
      match(SQLParser::T__19);
      setState(114);
      match(SQLParser::T__20);
      setState(115);
      column();
    }
    setState(124);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLParser::T__21) {
      setState(118);
      match(SQLParser::T__21);
      setState(119);
      match(SQLParser::Integer);
      setState(122);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SQLParser::T__22) {
        setState(120);
        match(SQLParser::T__22);
        setState(121);
        match(SQLParser::Integer);
      }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Index_statementContext
//------------------------------------------------------------------

SQLParser::Index_statementContext::Index_statementContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t SQLParser::Index_statementContext::getRuleIndex() const {
  return SQLParser::RuleIndex_statement;
}

void SQLParser::Index_statementContext::copyFrom(Index_statementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Alter_drop_indexContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Alter_drop_indexContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::IdentifiersContext *
SQLParser::Alter_drop_indexContext::identifiers() {
  return getRuleContext<SQLParser::IdentifiersContext>(0);
}

SQLParser::Alter_drop_indexContext::Alter_drop_indexContext(
    Index_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Alter_drop_indexContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitAlter_drop_index(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Alter_add_indexContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Alter_add_indexContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::IdentifiersContext *
SQLParser::Alter_add_indexContext::identifiers() {
  return getRuleContext<SQLParser::IdentifiersContext>(0);
}

SQLParser::Alter_add_indexContext::Alter_add_indexContext(
    Index_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Alter_add_indexContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitAlter_add_index(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Create_indexContext
//------------------------------------------------------------------

std::vector<tree::TerminalNode *> SQLParser::Create_indexContext::Identifier() {
  return getTokens(SQLParser::Identifier);
}

tree::TerminalNode *SQLParser::Create_indexContext::Identifier(size_t i) {
  return getToken(SQLParser::Identifier, i);
}

SQLParser::IdentifiersContext *SQLParser::Create_indexContext::identifiers() {
  return getRuleContext<SQLParser::IdentifiersContext>(0);
}

SQLParser::Create_indexContext::Create_indexContext(
    Index_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Create_indexContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitCreate_index(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Drop_indexContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Drop_indexContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::Drop_indexContext::Drop_indexContext(Index_statementContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Drop_indexContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitDrop_index(this);
  else
    return visitor->visitChildren(this);
}
SQLParser::Index_statementContext *SQLParser::index_statement() {
  Index_statementContext *_localctx =
      _tracker.createInstance<Index_statementContext>(_ctx, getState());
  enterRule(_localctx, 10, SQLParser::RuleIndex_statement);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(156);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 8, _ctx)) {
      case 1: {
        _localctx = dynamic_cast<Index_statementContext *>(
            _tracker.createInstance<SQLParser::Create_indexContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(126);
        match(SQLParser::T__4);
        setState(127);
        match(SQLParser::T__23);
        setState(128);
        match(SQLParser::Identifier);
        setState(129);
        match(SQLParser::T__24);
        setState(130);
        match(SQLParser::Identifier);
        setState(131);
        match(SQLParser::T__6);
        setState(132);
        identifiers();
        setState(133);
        match(SQLParser::T__7);
        break;
      }

      case 2: {
        _localctx = dynamic_cast<Index_statementContext *>(
            _tracker.createInstance<SQLParser::Drop_indexContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(135);
        match(SQLParser::T__8);
        setState(136);
        match(SQLParser::T__23);
        setState(137);
        match(SQLParser::Identifier);
        break;
      }

      case 3: {
        _localctx = dynamic_cast<Index_statementContext *>(
            _tracker.createInstance<SQLParser::Alter_add_indexContext>(
                _localctx));
        enterOuterAlt(_localctx, 3);
        setState(138);
        match(SQLParser::T__25);
        setState(139);
        match(SQLParser::T__5);
        setState(140);
        match(SQLParser::Identifier);
        setState(141);
        match(SQLParser::T__26);
        setState(142);
        match(SQLParser::T__23);
        setState(143);
        match(SQLParser::T__6);
        setState(144);
        identifiers();
        setState(145);
        match(SQLParser::T__7);
        break;
      }

      case 4: {
        _localctx = dynamic_cast<Index_statementContext *>(
            _tracker.createInstance<SQLParser::Alter_drop_indexContext>(
                _localctx));
        enterOuterAlt(_localctx, 4);
        setState(147);
        match(SQLParser::T__25);
        setState(148);
        match(SQLParser::T__5);
        setState(149);
        match(SQLParser::Identifier);
        setState(150);
        match(SQLParser::T__8);
        setState(151);
        match(SQLParser::T__23);
        setState(152);
        match(SQLParser::T__6);
        setState(153);
        identifiers();
        setState(154);
        match(SQLParser::T__7);
        break;
      }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Field_listContext
//------------------------------------------------------------------

SQLParser::Field_listContext::Field_listContext(ParserRuleContext *parent,
                                                size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<SQLParser::FieldContext *> SQLParser::Field_listContext::field() {
  return getRuleContexts<SQLParser::FieldContext>();
}

SQLParser::FieldContext *SQLParser::Field_listContext::field(size_t i) {
  return getRuleContext<SQLParser::FieldContext>(i);
}

size_t SQLParser::Field_listContext::getRuleIndex() const {
  return SQLParser::RuleField_list;
}

antlrcpp::Any SQLParser::Field_listContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitField_list(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::Field_listContext *SQLParser::field_list() {
  Field_listContext *_localctx =
      _tracker.createInstance<Field_listContext>(_ctx, getState());
  enterRule(_localctx, 12, SQLParser::RuleField_list);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158);
    field();
    setState(163);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SQLParser::T__27) {
      setState(159);
      match(SQLParser::T__27);
      setState(160);
      field();
      setState(165);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FieldContext
//------------------------------------------------------------------

SQLParser::FieldContext::FieldContext(ParserRuleContext *parent,
                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t SQLParser::FieldContext::getRuleIndex() const {
  return SQLParser::RuleField;
}

void SQLParser::FieldContext::copyFrom(FieldContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Normal_fieldContext
//------------------------------------------------------------------

tree::TerminalNode *SQLParser::Normal_fieldContext::Identifier() {
  return getToken(SQLParser::Identifier, 0);
}

SQLParser::Type_Context *SQLParser::Normal_fieldContext::type_() {
  return getRuleContext<SQLParser::Type_Context>(0);
}

SQLParser::Normal_fieldContext::Normal_fieldContext(FieldContext *ctx) {
  copyFrom(ctx);
}

antlrcpp::Any SQLParser::Normal_fieldContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor *>(visitor))
    return parserVisitor->visitNormal_field(this);
  else
    return visitor->visitChildren(this);
}
SQLParser::FieldContext *SQLParser::field() {
  FieldContext *_localctx =
      _tracker.createInstance<FieldContext>(_ctx, getState());
  enterRule(_localctx, 14, SQLParser::RuleField);

  auto onExit = finally([=] { exitRule(); });
  try {
    _localctx = dynamic_cast<FieldContext *>(
        _tracker.createInstance<SQLParser::Normal_fieldContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(166);
    match(SQLParser::Identifier);
    setState(167);
    type_();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_Context
//------------------------------------------------------------------

SQLParser::Type_Context::Type_Context(ParserRuleContext *parent,
                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SQLParser::Type_Context::Integer() {
  return getToken(SQLParser::Integer, 0);
}

size_t SQLParser::Type_Context::getRuleIndex() const {
  return SQLParser::RuleType_;
}
